# NinjaProject

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
